Update outline width in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
   >
     <div class="bg-black flex justify-center items-center h-100dvh">
       <div
-        class="bg-yellow-500 text-black p-4 rounded-lg max-w-lg border border-white border-2xl border-4 outline outline-offset-0 outline-red-500"
+        class="bg-yellow-500 text-black p-4 rounded-lg max-w-lg border border-white border-2xl border-4 outline-4px outline outline-offset-0 outline-red-500"
       >
         <img
           id="logo"
