Update styles and add alt text for chicken icon

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
       >
         <img
           id="logo"
+          alt="chicken icon"
           src=""
           class="w-5 h-5 inline-block translate-y--0.6 mr-2"
         />
